# saasy

./: LICENSE  README.md  pyproject.toml
src/saasy/: __main__.py  cli.py  core.py
src/saasy/resources/: services.yaml
src/sassy/: __main__.py  cli.py  core.py
src/sassy/resources/: services.yaml  utils.py
tests/: test_core.py
