[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sassy"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=14.2.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

# entry point do CLI
[project.scripts]
sassy = "sassy.cli:main"

# suporte a `pipx run` sem install prévia
[project.entry-points."pipx.run"]
sassy = "sassy.cli:main"

# conta que o código tá dentro de src/
[tool.hatch.build.targets.wheel]
packages = ["src/sassy"]

[tool.hatch.build.targets.wheel.force-include]
"src/sassy/resources" = "sassy/resources"