[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saasy"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=14.2.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

# entry point do CLI
[project.scripts]
saasy = "saasy.cli:main"

# suporte a `pipx run` sem install prévia
[project.entry-points."pipx.run"]
saasy = "saasy.cli:main"

# conta que o código tá dentro de src/
[tool.hatch.build.targets.wheel]
packages = ["src/saasy"]

[tool.hatch.build.targets.wheel.force-include]
"src/saasy/resources" = "saasy/resources"